src/App.css
/* Responsive Grid for Electronics */
.product-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  gap: 20px;
  padding: 20px;
}

.card {
  border: 1px solid #ddd;
  border-radius: 10px;
  padding: 15px;
  text-align: center;
  box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
  transition: transform 0.2s;
}

.card:hover {
  transform: scale(1.02);
}

.category-box {
  padding: 19px;
  border: 1px solid #eee;
  border-radius: 8px;
  width: 20%;
  background-color: #f9f9f9;
}

input[type="text"], input[type="number"], select {
  padding: 10px;
  margin: 10px 0;
  width: 80%;
  border-radius: 5px;
  border: 1px solid #ccc;
}

button {
  background-color: #28a745;
  color: white;
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

button:hover {
  background-color: #218838;
}

input[type="text"]:focus{
  outline: none;
  border-color: #28a745;
  box-shadow: 0 0 10px rgba(0, 212, 225, 0.5);
}

